--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project: Recipes</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="recipes/shepherds-pie-ragout.html">Shepherd's Pie Ragout</a>
     </body>
 </html>
