--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-
-        <a href="recipes/shepherds-pie-ragout.html">Shepherd's Pie Ragout</a>
+        <ul>
+            <li><a href="recipes/katsu-curry.html">Katsu Curry</a></li>
+        </ul>
+        
     </body>
 </html>
